Pushing changes for alignment correction

--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ body{
 .registration-form{
 	flex:0.6;
 	font-size:18px;
-	margin-left:15%;
+	margin-left:10%;
 	margin-top:35px;
 }
 
